k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        image: tlambeck/udemy-docker-multi-worker
        # No ports required because nothing needs to connect to the worker.
        #ports:
        #- containerPort: <Port>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

# The worker also has no cluster-ip-service.
